# vizmo

./: .gitignore  LICENSE  README.md  pyproject.toml  upload_to_pypi.sh
.github/workflows/: test.yml
dataflyer/: __init__.py  adaptive_octree.py  app.py  benchmark.py  camera.py  colormaps.py  data_manager.py  field_ops.py  gpu_compute.py  overlay.py  renderer.py  spatial_grid.py  ui.py  wgpu_app.py  wgpu_overlay.py  wgpu_renderer.py
dataflyer/assets/: star_psf_ubvri.npy
dataflyer/shaders/: cascade.wgsl  composite.frag  compute_stride.wgsl  depth_keys.wgsl  frustum_cull.wgsl  gather.wgsl  gather_summaries.wgsl  kernels.glsl  los_project.wgsl  prefix_sum.wgsl  radix_sort.wgsl  resolve.frag  resolve.vert  resolve.wgsl  splat.frag  splat.vert  splat_additive.frag  splat_aniso.wgsl  splat_quad.frag  splat_quad.vert  splat_quad.wgsl  splat_subsample.wgsl  star.frag  star.vert  star.wgsl  star_realistic.wgsl  text.wgsl
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/source/: API.rst  Quickstart.rst  community.rst  installation.rst
scripts/: mov2gif.sh
src/vizmo/: __init__.py  coordinate_grid.py  interpolation.py  io.py
test/: iotest.ipynb  test_io.py  test_slice.py
tests/: bench_detailed.py  bench_multigrid.py  bench_orbit_pid.py  bench_snapshot_zoom.py  bench_tree_queries.py  bench_wgpu_vs_moderngl.py  test_composite_state.py  test_surface_density_vs_sinkvis.py
vizmo/: __init__.py  app.py  camera.py  colormaps.py  data_manager.py  field_ops.py  gpu_compute.py  overlay.py  wgpu_app.py  wgpu_overlay.py  wgpu_renderer.py
vizmo/shaders/: common.wgsl  composite.wgsl  multigrid_bin.wgsl  resolve.wgsl  splat_subsample.wgsl  (+1 more)
(+4 files in other folders)
