[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dataflyer"
version = "0.1.0"
description = "Real-time 3D fly-through explorer for SPH simulation data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "h5py",
    "moderngl>=5.8",
    "glfw>=2.5",
    "matplotlib",
    "PyOpenGL",
    "natsort",
    "Pillow",
]

[project.scripts]
dataflyer = "dataflyer.app:main"
