[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vizmo"
version = "0.1.0"
description = "Real-time 3D fly-through explorer for SPH simulation data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "h5py",
    "glfw>=2.5",
    "matplotlib",
    "natsort",
    "Pillow",
    "wgpu>=0.19",
]

[project.scripts]
vizmo = "vizmo.app:main"
