[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vizmo"
version = "0.1.6"
description = "Real-time 3D fly-through explorer for mesh-free/unstructured simulation data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "glfw>=2.5",
    "matplotlib",
    "natsort",
    "Pillow",
    "wgpu>=0.19",
    "meshoid",
]

[project.scripts]
vizmo = "vizmo.app:main"

[tool.setuptools.packages.find]
include = ["vizmo*"]

[tool.setuptools.package-data]
vizmo = ["shaders/*.wgsl", "assets/*"]
